--- a/css/main.css
+++ b/css/main.css
@@ -4,33 +4,44 @@ body {
     background-size:cover;
     background-position: center;
 
-}
-h1{
-    font-weight: 300;
-    font-size: 50px;
     font-family: 'Open Sans','helvetica',arial,sans-serif;
-    text-shadow: 0 1px rgba(0,0,0,0.3);
-}
-.main-header{
-    text-align: center;
-    background-image: url(../img/banner.jpg);
-    margin-bottom: 20px;
-
+    font-weight: 300;
+    color: #62686f;
 }
 
-.main-header__avatar {
-    display: block;
-    margin: 0 auto;
-    margin-top: 70px;
-    border: 3px solid white;
-    padding: 1px;
-    border-radius: 999px;
-    box-shadow: 0 0px 2px 1px rgba(0,0,0,0.2);
-}
 .container {
     width: 960px;
     margin: 0 auto;
+}
 
+.main-header{
+    margin-top: 100px;
+    background-image: url(../img/banner.jpg);
+    padding: 1px;   /* 避免margin折叠 */
+
+}
+
+.main-header h1{
+    margin: 0 auto;
+    margin-bottom: 20px;
+    text-align: center;
+
+    font-weight: 300;
+    font-size: 50px;
+    color: white;
+    font-family: 'Open Sans','helvetica',arial,sans-serif;
+    text-shadow: 0 1px rgba(0,0,0,0.3);
+}
+
+.main-header__avatar {
+    margin: 0 auto;
+    display: block;
+    margin-top: -70px;
+    margin-bottom: 10px;
+    border: 3px solid white;
+
+    border-radius: 999px;
+    box-shadow: 0 0px 2px 1px rgba(0,0,0,0.2);
 }
 
 .centered-image {
